CREATE TABLE IF NOT EXISTS `monsters` (
  `id`               CHAR(36)      NOT NULL,
  `weapon_id`        BIGINT        NULL,
  `item_id`          BIGINT        NULL,
  `index_number`     VARCHAR(255)  NOT NULL,
  `name`             VARCHAR(255)  NOT NULL,
  `attack`           INT           NOT NULL,
  `hit_point`        INT           NOT NULL,
  `experience_point` INT           NOT NULL,
  `slash`            DECIMAL(4,2)  NOT NULL,
  `blow`             DECIMAL(4,2)  NOT NULL,
  `shoot`            DECIMAL(4,2)  NOT NULL,
  `neutral`          DECIMAL(4,2)  NOT NULL,
  `flame`            DECIMAL(4,2)  NOT NULL,
  `water`            DECIMAL(4,2)  NOT NULL,
  `wood`             DECIMAL(4,2)  NOT NULL,
  `shine`            DECIMAL(4,2)  NOT NULL,
  `dark`             DECIMAL(4,2)  NOT NULL,
  `created_at`       TIMESTAMP     NOT NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at`       TIMESTAMP     NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  PRIMARY KEY (`id`),
  UNIQUE KEY `uq_monsters_index_number` (`index_number`),
  CONSTRAINT `fk_monsters_weapon_id` FOREIGN KEY (`weapon_id`) REFERENCES `weapons` (`id`) ON DELETE SET NULL ON UPDATE CASCADE,
  CONSTRAINT `fk_monsters_item_id`   FOREIGN KEY (`item_id`)   REFERENCES `items`   (`id`) ON DELETE SET NULL ON UPDATE CASCADE
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
